--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,10 +70,15 @@ jobs:
       url: https://s3gjildtcyuuq-dev.azurewebsites.net/
     
     steps:
-      - name: 'Login via Azure CLI'
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - uses: azure/login@v1
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        # We also need to ensure that enable-AzPSSession is true. This is important for
+        # using OIDC in Azure. If we were to pass in a client secret instead, we would not need
+        # this setting enabled
+        enable-AzPSSession: true
 
       - uses: azure/webapps-deploy@v2
         with:
@@ -91,10 +96,15 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: 'Login via Azure CLI'
-      uses: azure/login@v1
+    - uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        # We also need to ensure that enable-AzPSSession is true. This is important for
+        # using OIDC in Azure. If we were to pass in a client secret instead, we would not need
+        # this setting enabled
+        enable-AzPSSession: true
 
     - uses: azure/webapps-deploy@v2
       with:
@@ -112,10 +122,15 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: 'Login via Azure CLI'
-      uses: azure/login@v1
+    - uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        # We also need to ensure that enable-AzPSSession is true. This is important for
+        # using OIDC in Azure. If we were to pass in a client secret instead, we would not need
+        # this setting enabled
+        enable-AzPSSession: true
 
     - uses: azure/webapps-deploy@v2
       with:
