--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,8 @@ jobs:
       url: https://s3gjildtcyuuq-dev.azurewebsites.net/
     
     steps:
-    - uses: azure/login@v1
+    - name: 'Login via Azure CLI'
+      uses: azure/login@v1
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
@@ -96,7 +97,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - uses: azure/login@v1
+    - name: 'Login via Azure CLI'
+      uses: azure/login@v1
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
@@ -122,7 +124,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - uses: azure/login@v1
+    - name: 'Login via Azure CLI'
+      uses: azure/login@v1
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
