--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,10 @@ on:
     paths: Application/**
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
+  permissions:
+  id-token: write
+  contents: read
 jobs:
   build:
 
