--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,11 +15,6 @@ on:
     paths: Application/**
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  
-permissions:
-  id-token: write
-  contents: read
-
 jobs:
   build:
 
@@ -78,13 +73,7 @@ jobs:
       - name: 'Login via Azure CLI'
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          # We also need to ensure that enable-AzPSSession is true. This is important for
-          # using OIDC in Azure. If we were to pass in a client secret instead, we would not need
-          # this setting enabled
-          enable-AzPSSession: true
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - uses: azure/webapps-deploy@v2
         with:
@@ -105,13 +94,7 @@ jobs:
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        # We also need to ensure that enable-AzPSSession is true. This is important for
-        # using OIDC in Azure. If we were to pass in a client secret instead, we would not need
-        # this setting enabled
-        enable-AzPSSession: true
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - uses: azure/webapps-deploy@v2
       with:
@@ -132,13 +115,7 @@ jobs:
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        # We also need to ensure that enable-AzPSSession is true. This is important for
-        # using OIDC in Azure. If we were to pass in a client secret instead, we would not need
-        # this setting enabled
-        enable-AzPSSession: true
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - uses: azure/webapps-deploy@v2
       with:
