--- a/.github/workflows/loadtest.yml
+++ b/.github/workflows/loadtest.yml
@@ -7,9 +7,9 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: "{your_prefix}-dev"    # set this to your application's name
-  LOAD_TEST_RESOURCE: "{load_test_resource_name}"   # set this to your Azure Load Test resource's name
-  LOAD_TEST_RESOURCE_GROUP: "{resource_group_name}" # set this to the resource group you've used for this training
+  AZURE_WEBAPP_NAME: "s3gjildtcyuuq-dev"    # set this to your application's name
+  LOAD_TEST_RESOURCE: "loadtest"   # set this to your Azure Load Test resource's name
+  LOAD_TEST_RESOURCE_GROUP: "rg-devops" # set this to the resource group you've used for this training
 
 jobs:
   loadTest:
